Fixed buttons on homepage
Fixed issue where "Login with Spotify" button was too small for text content and colliding with "logout" button.

--- a/angular/src/app/home/home.component.css
+++ b/angular/src/app/home/home.component.css
@@ -21,11 +21,27 @@
 }
 
 .spotifyButton {
-    background-color: green;
+  background-color: green;
+  vertical-align: middle;
+  position:fixed;
+  right:100px;
 }
 .logoutButton {
-    background-color: red;
-    margin-left: 10px;
+  background-color: red;
+  vertical-align: middle;
+  position: fixed;
+  right: 10px;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+}
+
+.divider{
+    width:10px;
+    height:auto;
+    display:inline-block;
 }
 
 .bpmLabel {
